proyecto3/k8s/gateway/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: proyecto3-route
  namespace: proyecto3
spec:
  parentRefs:
    - name: proyecto3-gateway
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /grpc-202307705
      backendRefs:
        - name: rust-api
          port: 8080
    - matches:
        - path:
            type: PathPrefix
            value: /dapr-202307705
      backendRefs:
        - name: rust-api
          port: 8080
